# RANS

./: .gitignore  Makefile  README.md  db_setup.js  hosts.ini  playbook.yaml  rans.service  setup.sh
arangodb3/: SERVER  VERSION-1  VERSION-200
arangodb3/engine-rocksdb/: 000305.sst  000319.sst  000322.sst  000323.sst  IDENTITY  MANIFEST-000293  OPTIONS-000314  OPTIONS-000316
client/: index.html  package-lock.json  package.json  vite.config.ts
client/src/: .prettierrc  App.svelte  app.css
client/src/components/: ConfirmationModal.svelte  ItemCard.svelte  ItemModal.svelte  NavBar.svelte  Notification.svelte  OrderCard.svelte  OrderModal.svelte  PasswordField.svelte  ProtectedRoute.svelte  ProtectedRouteGuard.svelte  SearchBar.svelte
client/src/pages/: Home.svelte  Login.svelte  Orders.svelte  Signup.svelte
client/src/store/: auth.store.ts  items.store.ts  notification.store.ts  orders.store.ts
config/: config.toml  ifcfg-ens192  nginx.conf  rans.iste444.com  ransapi.iste444.com
db_backup/: User_8f9bfe9d1345237cb3b2b205864da075.structure.json  dump.json
db_dump/: Item_7d74f3b92b19da5e606d737d339a9679.structure.json  Order_a240fa27925a635b08dc28c9e4f9216d.structure.json  User_8f9bfe9d1345237cb3b2b205864da075.structure.json  dump.json
docs/: openapi.json
rans.service.d/: rans.api.service  rans.db.service  rans.nginx.service  rans.service
server/: .gitignore  Cargo.toml
server/src/: api.rs  constants.rs  db.rs  lib.rs  logs.rs  main.rs  models.rs  toml_env.rs
server/src/requests/: auth.rs  items.rs  jwt.rs  orders.rs  routes.rs
(+5 files in other folders)
