[package]
name = "server"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.6.12"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["full"] }
arangors = { version = "0.5.3", features = ["surf_async"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tracing = "0.1"
tracing-subscriber = { version = "0.3"}
schemars = { version = "0.8.12", features = ["chrono"] }
chrono = { version = "0.4.23", features = ["serde"] }
log = "0.4.17"
toml = "0.7.3"
bcrypt = "0.14.0"